resolved overflow

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 body {
     background-image: linear-gradient(115deg,rgba(58, 58, 158, 0.8),rgba(136, 136, 206, 0.7)),  url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
     font-family: sans-serif;
-    width: 100%;
-    padding-bottom: 5%;
+    width: 90%;
+    height: 94%;
+    padding: 1% 5% 5% 5%;
+    margin: 0;
 }
 
 form {
@@ -14,7 +16,6 @@ form {
     border-radius: 8px;
     border-width: 1px;
     padding: 20px;
-    background-clip: padding-box;
     max-width: 600px;
     font-size: 20px;
 }
@@ -26,7 +27,7 @@ header {
 section {
     padding-bottom: 3%;
     margin-right: -7%;
-    margin-left: 2%;
+    margin-left: 3%;
 }
 
 .white-box {
@@ -47,5 +48,5 @@ button {
     font-size: 20px;
     box-sizing: content-box;
     margin-right: -7%;
-    margin-left: 2%;
+    margin-left: 3%;
 }
